--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -1,7 +1,7 @@
 # General
 set -g prefix `
 bind ` send-prefix
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+set-environment -g PATH $PATH
 
 set -g default-terminal "xterm-256color"
 
