--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -31,7 +31,7 @@ set -g status-right "%d %b %Y %l:%M %p #[fg=green,bg=default,bright] #(pmset -g 
 
 
 # Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # run '~/.tmux/plugins/tpm/tpm'
