--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -23,7 +23,6 @@ alias dev="cd ~/Desktop/projects"
 # vim keybinds
 fish_hybrid_key_bindings
 
-starship init fish | source
+set -g HOMEBREW_AUTO_UPDATE_SECS 604800
 
-# source pyenv
-# pyenv init - | source
+starship init fish | source
