--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -1,6 +1,6 @@
 # General
-set -g prefix `
-bind ` send-prefix
+set -g prefix C-Space
+bind Space send-prefix
 
 set -g default-terminal "xterm-256color"
 
