add i3 to initial setup script

--- a/dot_config/scripts/install_packages.sh.tmpl
+++ b/dot_config/scripts/install_packages.sh.tmpl
@@ -35,6 +35,9 @@ brew bundle --file=.config/brew/Brewfile
         sudo snap install docker 
         sudo snap install signal-desktop 
         sudo snap install spotify
+
+        # dependencies for i3
+        sudo apt install i3 light rofi
 {{ end -}}
 
 # set fish as default shell
