templatize gitconfig information

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -2,8 +2,8 @@
         editor = nvim    
 
 [user] 
-        email = evanrittenhouse@gmail.com
-        name = Evan Rittenhouse
+        email = {{ .git_email }}
+        name = {{ .git_name }}
 
 [init]
         defaultBranch = main
