--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -2,7 +2,8 @@
 set -g prefix C-Space
 bind Space send-prefix
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+# set-option -sa terminal-overrides',screen-256color:RGB'
 
 {{ if eq .chezmoi.os "darwin" -}}
 set -g default-shell "/opt/homebrew/bin/fish"
