--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -10,6 +10,7 @@ set -g default-shell "/opt/homebrew/bin/fish"
 {{ else if eq .chezmoi.os "linux" -}}
 set -g default-shell "/home/linuxbrew/.linuxbrew/bin/fish"
 {{ end }}
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '{{ .chezmoi.homeDir }}/.config/tmux/plugins/'
 
 set -g base-index 1
 set -s escape-time 0
@@ -32,7 +33,7 @@ set -g status-right "%d %b %Y %l:%M %p #[fg=green,bg=default,bright] #(pmset -g 
 
 
 # Plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# 
-# run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '{{ .chezmoi.homeDir }}/.config/tmux/plugins/tpm/tpm'
