--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -14,10 +14,12 @@ brew 'tree-sitter'
 {{ if eq .chezmoi.os "darwin" -}}
         tap 'homebrew/cask'
         tap 'homebrew/cask-versions'
+        tap 'homebrew/cask-fonts'
 
         cask 'dash'
         cask 'iterm2'
         cask 'obsidian'
         cask 'rectangle'
         cask 'spotify'
+        cask 'font-hack-nerd-font'
 {{end -}}
