--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -7,10 +7,14 @@ end
     eval (/home/linuxbrew/.linuxbrew/bin/brew shellenv)
 {{ end }}
 
-# autojump
 {{ if eq .chezmoi.os "darwin" -}}
+    eval (/opt/homebrew/bin/brew shellenv)
+
+    # autojump
     [ -f /opt/homebrew/share/autojump/autojump.fish ]; and source /opt/homebrew/share/autojump/autojump.fish
 {{ else if eq .chezmoi.os "linux" -}}
+    eval (/home/linuxbrew/.linuxbrew/bin/brew shellenv)
+
     [ -f /home/linuxbrew/.linuxbrew/share/autojump/autojump.fish ]; and source /home/linuxbrew/.linuxbrew/share/autojump/autojump.fish
 {{ end }}
 
