--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -2,8 +2,7 @@
         editor = nvim    
 
 [user] 
-        email = {{ .git_email }}
-        name = {{ .git_name }}
+        name = Evan Rittenhouse
 
 [init]
         defaultBranch = main
