initial java setup work - still need to configure nvim-jdtls

--- a/dot_config/scripts/install_packages.sh.tmpl
+++ b/dot_config/scripts/install_packages.sh.tmpl
@@ -1,6 +1,7 @@
 #! /bin/sh
 
-# TODO - implement auto-install with https://www.chezmoi.io/user-guide/use-scripts-to-perform-actions/#run-a-script-when-the-contents-of-another-file-changes
+# TODO - scripts to install various languages
+# python by default should be good, but we also might want java/dart
 install_brew () {
         echo "Homebrew not found, installing..."
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
