--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -28,5 +28,6 @@ alias dev="cd ~/Desktop/projects"
 fish_hybrid_key_bindings
 
 set -g HOMEBREW_AUTO_UPDATE_SECS 604800
+set -g JAVA_HOME {{ .JAVA_HOME }}
 
 starship init fish | source
