alias for vim -S Session.vim (will only work if session file is in cwd)

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -20,6 +20,7 @@ end
 
 # aliases
 alias vim="nvim"
+alias vims="vim -S Session.vim"
 alias ls="ls -laG"
 alias cat="bat"
 alias dev="cd ~/Desktop/projects"
