--- a/dot_config/scripts/install_packages.sh.tmpl
+++ b/dot_config/scripts/install_packages.sh.tmpl
@@ -39,7 +39,7 @@ brew bundle --file=~/.config/brew/Brewfile
         sudo snap install spotify
 
         # dependencies for i3
-        sudo apt install i3 light rofi
+        sudo apt install i3 light rofi polybar
 {{ end -}}
 
 # set fish as default shell
