polybar working after manually launching start script
need to figure uot why the autostart from i3 bootstrap routine isn't
working. polybar configuration stolen off someone - need to find a
better theme as well

--- a/dot_config/scripts/configure_os.sh.tmpl
+++ b/dot_config/scripts/configure_os.sh.tmpl
@@ -1,5 +1,10 @@
 # TODO: MAC
 # iterm2 general preferences, native fullscreen
 # default scroll direction
+{{ if eq .chezmoi.os "darwin" -}}
+{{ end }}
 
-
+{{ if eq .chezmoi.os "linux" -}}
+        # set polybar launch script to be executable by window manager
+        chmod +x {{ .chezmoi.homeDir }}/.config/polybar/launch.sh
+{{ end }}
