(git) rebase on pull, prune on fetch, zebra color on lines that moved

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -7,3 +7,15 @@
 [user]
     name = Evan Rittenhouse
     email = evanrittenhouse@gmail.com
+
+[pull]
+    # default pull strategy is rebase rather than merge
+    rebase = true
+
+[fetch]
+    # run git remote prune on every fetch
+    prune = true
+
+[diff]
+    # add a new color in a diff file if lines have simply moved 
+    colorMoved = zebra
