(fish) add Obisidian to dependencies and create alias for it

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -24,6 +24,7 @@ alias vims="vim -S Session.vim"
 alias ls="ls -laG"
 alias cat="bat"
 alias dev="cd ~/Desktop/projects"
+alias obsidian="flatpak run md.obsidian.Obsidian"
 
 # vim keybinds
 fish_hybrid_key_bindings
