--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -24,7 +24,11 @@ alias vims="vim -S Session.vim"
 alias ls="ls -laG"
 alias cat="bat"
 alias dev="cd ~/Desktop/projects"
-alias obsidian="flatpak run md.obsidian.Obsidian"
+{{ if eq .chezmoi.os "linux" -}}
+    alias obsidian="flatpak run md.obsidian.Obsidian"
+    alias spotify="flatpak run com.spotify.Client" 
+    alias firefox="flathub run org.mozilla.Firefox"
+{{ end }}
 
 # vim keybinds
 fish_hybrid_key_bindings
