--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -17,10 +17,13 @@ brew 'tree-sitter'
         tap 'homebrew/cask-versions'
         tap 'homebrew/cask-fonts'
 
+        cask 'alacritty'
         cask 'dash'
-        cask 'iterm2'
         cask 'obsidian'
         cask 'rectangle'
+        cask 'signal'
         cask 'spotify'
-        cask 'font-hack-nerd-font'
+
+        # TODO - figure out a way to avoid hard-coding font
+        cask 'font-fira-code-nerd-font'
 {{end -}}
