(chezmoi) change `dev` alias output

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -23,7 +23,7 @@ alias vim="nvim"
 alias vims="vim -S Session.vim"
 alias ls="ls -laG"
 alias cat="bat"
-alias dev="cd ~/Desktop/projects"
+alias dev="cd ~/Documents/projects"
 {{ if eq .chezmoi.os "linux" -}}
     alias obsidian="flatpak run md.obsidian.Obsidian"
     alias spotify="flatpak run com.spotify.Client" 
