--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -2,7 +2,11 @@
 set -g prefix C-Space
 bind Space send-prefix
 
+{{ if eq .chezmoi.os "linux" -}}
 set -g default-terminal "tmux-256color"
+{{ else if eq .chezmoi.os "darwin" -}}
+set -g default-terminal "xterm-256color:Tc"
+{{ end }}
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 {{ if eq .chezmoi.os "darwin" -}}
