--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -5,9 +5,9 @@ bind Space send-prefix
 {{ if eq .chezmoi.os "linux" -}}
 set -g default-terminal "tmux-256color"
 {{ else if eq .chezmoi.os "darwin" -}}
-set -g default-terminal "xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
 {{ end }}
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color"
 
 {{ if eq .chezmoi.os "darwin" -}}
 set -g default-shell "/opt/homebrew/bin/fish"
