--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -20,3 +20,34 @@
 [diff]
     # add a new color in a diff file if lines have simply moved 
     colorMoved = zebra
+
+    # use nvim as difftool
+    tool = nvim
+
+[alias]
+    # inspiration from https://gist.github.com/mwhite/6887990
+
+    # one-line log
+    l = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
+
+    a = add
+    ap = add -p
+    c = commit --verbose
+    ca = commit -a --verbose
+    cm = commit -m
+    cam = commit -a -m
+    m = commit --amend --verbose
+    
+    d = diff
+    ds = diff --stat
+    dc = diff --cached
+    dv = difftool -t vimdiff -y
+
+    s = status -sb
+    co = checkout
+    cob = checkout -b
+    # list branches sorted by last modified
+    b = "!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'"
+
+    # list aliases
+    la = "!git config -l | grep alias | cut -c 7-"
