--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -19,6 +19,9 @@ brew 'tree-sitter'
 
         cask 'alacritty'
         cask 'dash'
+        cask 'docker'
+        cask 'firefox'
+        cask 'iterm2'
         cask 'obsidian'
         cask 'rectangle'
         cask 'signal'
