(macOS) change scroll direction to non-natural

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -19,6 +19,7 @@ brew 'tree-sitter'
 
         cask 'alacritty'
         cask 'dash'
+        cask 'discord'
         cask 'docker'
         cask 'firefox'
         cask 'iterm2'
