--- a/dot_config/scripts/executable_configure_os.sh.tmpl
+++ b/dot_config/scripts/executable_configure_os.sh.tmpl
@@ -1,7 +1,8 @@
 # TODO: MAC
 # iterm2 general preferences, native fullscreen
-# default scroll direction
 {{ if eq .chezmoi.os "darwin" -}}
+# disable natural scroll direction 
+defaults write -g com.apple.swipescrolldirection -bool false
 {{ end }}
 
 {{ if eq .chezmoi.os "linux" -}}
