(macOS) autohide dock

--- a/dot_config/scripts/executable_configure_os.sh.tmpl
+++ b/dot_config/scripts/executable_configure_os.sh.tmpl
@@ -3,6 +3,9 @@
 {{ if eq .chezmoi.os "darwin" -}}
 # disable natural scroll direction 
 defaults write -g com.apple.swipescrolldirection -bool false
+
+# autohide dock
+defaults write -g com.apple.dock -bool true
 {{ end }}
 
 {{ if eq .chezmoi.os "linux" -}}
