(git) templatize Git username/email

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -6,8 +6,8 @@
     defaultBranch = main
 
 [user]
-    name = Evan Rittenhouse
-    email = evanrittenhouse@gmail.com
+    name = {{ .name }}
+    email = {{ .email }}
 
 [pull]
     # default pull strategy is rebase rather than merge
