(git) add more .gitconfig aliases

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -32,6 +32,9 @@
 
     a = add
     ap = add -p
+    r = restore
+    res = reset
+    nuke = reset --hard
     c = commit --verbose
     ca = commit -a --verbose
     cm = commit -m
