--- a/dot_config/scripts/executable_configure_os.sh.tmpl
+++ b/dot_config/scripts/executable_configure_os.sh.tmpl
@@ -6,6 +6,11 @@ defaults write -g com.apple.swipescrolldirection -bool false
 
 # autohide dock
 defaults write -g com.apple.dock -bool true
+
+# change default iTerm2 preferences location 
+defaults write -g com.googlecode.iterm2 PrefsCustomFolder -string "~/.config/iterm2"
+# tell iTerm2 to use the preferences in that directory
+defaults write -g com.googlecode.iterm2 LoadPrefsFromCustomFolder -bool true
 {{ end }}
 
 {{ if eq .chezmoi.os "linux" -}}
