--- a/dot_config/scripts/executable_install_packages.sh.tmpl
+++ b/dot_config/scripts/executable_install_packages.sh.tmpl
@@ -38,7 +38,7 @@ brew bundle --file=~/.config/brew/Brewfile
         sudo snap install signal-desktop 
 
         # dependencies for i3
-        sudo apt install i3 light rofi polybar picom flatpak
+        sudo apt install alacritty i3 light rofi polybar picom flatpak
 
         flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
         flatpak install flathub md.obsidian.Obsidian
