(git) add git mne alias

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -40,6 +40,7 @@
     cm = commit -m
     cam = commit -a -m
     m = commit --amend --verbose
+    mne = commit --amend --no-edit
     
     d = diff
     ds = diff --stat
