--- a/dot_config/nvim/lua/lsp/init.lua.tmpl
+++ b/dot_config/nvim/lua/lsp/init.lua.tmpl
@@ -59,12 +59,6 @@ local capabilities = vim.lsp.protocol.make_client_capabilities()
 capabilities = require("cmp_nvim_lsp").default_capabilities(capabilities)
 
 local lspconfig = require('lspconfig')
-lspconfig['pyright'].setup {
-    on_attach = base_on_attach,
-    capabilities = capabilities,
-    flags = {}
-}
-
 lspconfig['lua_ls'].setup {
     on_attach = base_on_attach,
     flags = {},
@@ -77,6 +71,14 @@ lspconfig['lua_ls'].setup {
     }
 }
 
+{{ if eq (index . "python") true -}}
+lspconfig['pyright'].setup {
+    on_attach = base_on_attach,
+    capabilities = capabilities,
+    flags = {}
+}
+{{ end }}
+{{ if eq (index . "typescript") true -}}
 lspconfig['tsserver'].setup {
     on_attach = function(client, bufnr)
         base_on_attach(client, bufnr)
@@ -85,13 +87,15 @@ lspconfig['tsserver'].setup {
     end,
     flags = {},
 }
-
+{{ end }}
+{{ if eq (index . "rust") true -}}
 lspconfig['rust_analyzer'].setup {
     on_attach = base_on_attach,
     capabilities = capabilities
     -- cmd = "rustup run stable rust-analyzer"
 }
-
+{{ end }}
+{{ if eq (index . "flutter") true -}}
 require('flutter-tools').setup {
     lsp = {
         on_attach = base_on_attach,
@@ -104,3 +108,4 @@ require('flutter-tools').setup {
         }
     }
 }
+{{ end }}
