(git) add more (r)eset aliases

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -33,6 +33,9 @@
     a = add
     ap = add -p
     r = restore
+    rp = restore -p
+    rs = restore --staged
+    rsp = restore --staged -p
     res = reset
     nuke = reset --hard
     c = commit --verbose
