(brew) add flux to macOS casks

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -25,6 +25,7 @@ brew 'tree-sitter'
         cask 'discord'
         cask 'docker'
         cask 'firefox'
+        cask 'flux'
         cask 'iterm2'
         cask 'obsidian'
         cask 'rectangle'
