(iterm) convert profile to dynamic working directory

--- a/dot_config/iterm2/iterm_profile.json.tmpl
+++ b/dot_config/iterm2/iterm_profile.json.tmpl
@@ -87,7 +87,7 @@
     "Alpha Component" : 1,
     "Green Component" : 0.84313726425170898
   },
-  "Working Directory" : "\/Users\/evanritt",
+  "Working Directory" : "{{ .chezmoi.homeDir }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -330,7 +330,7 @@
     "Green Component" : 0.65882354974746704
   },
   "ASCII Ligatures" : false,
-  "Name" : "Default",
+  "Name" : "{{ .chezmoi.username }} (chezmoi)",
   "Cursor Text Color" : {
     "Red Component" : 0.11372549086809158,
     "Color Space" : "sRGB",
