--- a/dot_config/scripts/executable_install_packages.sh.tmpl
+++ b/dot_config/scripts/executable_install_packages.sh.tmpl
@@ -32,18 +32,18 @@ brew bundle --file=~/.config/brew/Brewfile
 
 # linux equivalent of homebrew casks
 {{ if eq .chezmoi.os "linux" -}}
-        command -v snap > /dev/null && continue || sudo apt install snapd
-
-        sudo snap install 1password 
-        sudo snap install signal-desktop 
-
         # dependencies for i3
-        sudo apt install alacritty i3 light rofi polybar picom flatpak
+        sudo apt install alacritty i3
 
+        {{ if eq .email "evanrittenhouse@gmail.com" -}}
+        sudo apt install flatpak light picom polybar rofi
         flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
         flatpak install flathub md.obsidian.Obsidian
         flatpak install flathub com.spotify.Client
-        flatpak install flathub org.mozilla.firefox
+        flatpak install flathub org.mozilla.firefox 
+        flatpak install flathub org.signal.Signal
+        flatpak install https://downloads.1password.com/linux/flatpak/1Password.flatpakref
+        {{ end -}}
 {{ end -}}
 
 # set fish as default shell
