(tmux) move status bar to top of window

--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -32,7 +32,7 @@ bind l select-pane -R
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g renumber-windows on
 
 set -g status-style bg='#1d2021',fg=default,dim
