(fish) add pyenv on MacOS if python is specified

--- a/dot_config/brew/Brewfile.tmpl
+++ b/dot_config/brew/Brewfile.tmpl
@@ -7,6 +7,7 @@ brew 'neovim'
 brew 'poetry'
 brew 'pyright'
 brew 'python'
+brew 'pyenv'
 {{ end }}
 brew 'ripgrep'
 {{ if eq (index . "rust") true -}}
