--- a/dot_config/scripts/executable_install_packages.sh.tmpl
+++ b/dot_config/scripts/executable_install_packages.sh.tmpl
@@ -33,12 +33,13 @@ brew bundle --file=~/.config/brew/Brewfile
 # linux equivalent of homebrew casks
 {{ if eq .chezmoi.os "linux" -}}
         # dependencies for i3
-        sudo apt install alacritty i3 rofi brightnessctl flatpak picom polybar rofi
+        sudo apt install alacritty i3 rofi brightnessctl flatpak picom polybar rofi feh redshift
 
-        {{ if eq .email "evanrittenhouse@gmail.com" -}}
         flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
         flatpak install flathub md.obsidian.Obsidian
         flatpak install flathub com.spotify.Client
+
+        {{ if eq .email "evanrittenhouse@gmail.com" -}}
         flatpak install flathub org.mozilla.firefox 
         flatpak install flathub org.signal.Signal
         flatpak install https://downloads.1password.com/linux/flatpak/1Password.flatpakref
