(polybar) migrate to chezmoi colors

--- a/dot_config/polybar/config.ini.tmpl
+++ b/dot_config/polybar/config.ini.tmpl
@@ -271,8 +271,8 @@ type = internal/i3
 label-focused = %icon% %name% %icon%
 label-unfocused = %icon% %name% %icon%
 
-label-focused-foreground = #1F1F28
-label-focused-background = #FFA066
+label-focused-foreground = {{ .colors.sumiInk3 }}
+label-focused-background = {{ .colors.surimiOrange }}
 ; Only show workspaces defined on the same output as the bar
 ;
 ; Useful if you want to show monitor specific workspaces
