--- a/dot_config/rofi/config.rasi.tmpl
+++ b/dot_config/rofi/config.rasi.tmpl
@@ -1,112 +1,93 @@
-// configuration {
-//     modi: "window,run,ssh,drun,combi";
-// }
-// @theme "/usr/share/rofi/themes/Monokai.rasi"
 /*******************************************************************************
- * ROFI ONELINE THEME USING THE NORD COLOR PALETTE 
+ * ROFI SQUARED THEME USING THE MATERIAL DARKER PALETTE 
  * User                 : LR-Tech               
  * Theme Repo           : https://github.com/lr-tech/rofi-themes-collection
- * Nord Project Repo    : https://github.com/arcticicestudio/nord
+
+ * See https://github.com/davatorium/rofi/blob/next/doc/rofi-theme.5.markdown
  *******************************************************************************/
 
 * {
-    font:   "Fira Code 12";
-
-    nord0:     #2e3440;
-    nord1:     #3b4252;
-    nord2:     #434c5e;
-    nord3:     #4c566a;
-
-    nord4:     #d8dee9;
-    nord5:     #e5e9f0;
-    nord6:     #eceff4;
-
-    nord7:     #8fbcbb;
-    nord8:     #88c0d0;
-    nord9:     #81a1c1;
-    nord10:    #5e81ac;
-    nord11:    #bf616a;
-
-    nord12:    #d08770;
-    nord13:    #ebcb8b;
-    nord14:    #a3be8c;
-    nord15:    #b48ead;
+    font:   "FiraCode Nerd Font Medium 12";
 
     background-color:   transparent;
-    text-color:         @nord4;
-    accent-color:       @nord8;
+    text-color:        {{ .colors.fujiWhite }};
 
-    margin:     0px;
-    padding:    0px;
-    spacing:    0px;
+    margin:     0;
+    padding:    0;
+    spacing:    0;
 }
 
 window {
-    location:           north;
-    width:              100%;
-    background-color:   @nord0;
-    children:           [ mainbox,message ];
-}
+    location:   south;
+    width:      480;
 
-mainbox {
-    orientation:    horizontal;
-    children:       [ inputbar,listview ];
+    background-color:   {{ .colors.sumiInk0 }};
 }
 
 inputbar {
-    width:      25%;
-    padding:    1px 8px;
-    spacing:    8px;
-    children:   [ prompt, entry ];
+    spacing:    8px; 
+    padding:    8px;
+
+    background-color:   {{ .colors.sumiInk4 }};
 }
 
-prompt, entry, element-text, element-icon {
+prompt, entry, element-icon, element-text {
     vertical-align: 0.5;
 }
 
 prompt {
-    text-color: {{ .colors.autumnGreen }};
+    text-color: {{ .colors.springGreen }};
 }
 
 entry {
     text-color: {{ .colors.fujiWhite }};
 }
 
+textbox {
+    padding:            8px;
+    background-color:   {{ .colors.sumiInk1 }};
+}
+
 listview {
-    layout: horizontal;
+    padding:    4px 0;
+    lines:      8;
+    columns:    1;
+
+    fixed-height:   false;
 }
 
 element {
-    padding:    1px 8px;
-    spacing:    4px;
+    padding:    8px;
+    spacing:    8px;
+}
+
+element normal normal {
+    text-color: {{ .colors.sumiInk0 }};
 }
 
 element normal urgent {
-    text-color: @nord13;
+    text-color: {{ .colors.roninYellow }};
 }
 
 element normal active {
-    text-color: @accent-color;
-}
-
-element selected {
+    background-color: {{ .colors.autumnGreen }};
     text-color: {{ .colors.fujiWhite }};
 }
 
-element selected normal {
-    background-color:   @accent-color;
+element selected {
+    text-color: {{ .colors.sumiInk0 }};
 }
 
-element selected urgent {
-    background-color:   @nord13;
-}
-
-element selected active {
+element selected normal, element selected active {
     background-color:   {{ .colors.springGreen }};
 }
 
+element selected urgent {
+    background-color:   {{ .colors.roninYellow }};
+}
+
 element-icon {
-    size:   0.75em;
+    size:   0.8em;
 }
 
 element-text {
