(wallpapers) change wallpaper to 5cms_

--- a/dot_config/polybar/config.ini.tmpl
+++ b/dot_config/polybar/config.ini.tmpl
@@ -18,7 +18,7 @@ module-margin-right = 6
 modules-right = wireless-network battery
 
 ; Matches kanagawa_minimalist in wallpaper
-background = #2e3440
+background = #00000000
 
 [bar/bottom]
 monitor = ${env:MONITOR:}
@@ -45,7 +45,9 @@ modules-center = i3
 modules-right = backlight volume clock
 
 ; Matches kanagawa_minimalist in /wallpapers
-background = #2e3440
+; background = #2e3440
+; transparent background
+background = #00000000
 
 [module/backlight]
 type = internal/backlight
