(polybar) volume module working

--- a/dot_config/polybar/modules/colors.ini.tmpl
+++ b/dot_config/polybar/modules/colors.ini.tmpl
@@ -1,6 +1,11 @@
 [colors]
 autumnYellow = {{ .colors.autumnYellow }}
+autumnGreen = {{ .colors.autumnGreen }}
+fujiWhite = {{ .colors.fujiWhite }}
 samuraiRed = {{ .colors.samuraiRed }}
 springGreen = {{ .colors.springGreen }}
+sumiInk2 = {{ .colors.sumiInk2 }}
 sumiInk3 = {{ .colors.sumiInk3 }}
+sumiInk4 = {{ .colors.sumiInk4 }}
 roninYellow = {{ .colors.roninYellow }}
+transparent = #00000000
