--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -26,6 +26,10 @@ bind r source-file {{ .chezmoi.homeDir }}/.tmux.conf \; display "Tmux config rel
 
 setw -g mode-keys vi
 
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
