(nvim) add a couple of autocmds
1) Auto-apply `chezmoi apply` when saving buffers in the chezmoi
   directory
2) Auto-save buffer changes when changing tmux panes (thus the tmux
   `focus-events on` change)

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,5 +1,5 @@
 {{ $email := promptString "Email" -}}
-{{ $name := promptString "Name" -}}
+{{ $name := promptString "Name for git commits" -}}
 
 data:
     email: {{ $email | quote }}
