(git) rename `push --force-with-lease` alias to `please

--- a/dot_config/git/gitconfig.tmpl
+++ b/dot_config/git/gitconfig.tmpl
@@ -44,7 +44,7 @@
     cam = commit -a -m
     m = commit --amend --verbose
     mne = commit --amend --no-edit
-    pushf = push --force-with-lease
+    please = push --force-with-lease
     
     d = diff
     ds = diff --stat
