(nvim) nested glob for chezmoi apply autocmd

--- a/dot_config/nvim/lua/vim_config/autocmd.lua.tmpl
+++ b/dot_config/nvim/lua/vim_config/autocmd.lua.tmpl
@@ -32,6 +32,6 @@ vim.api.nvim_create_autocmd({ 'BufLeave', 'FocusLost' }, {
 
 vim.api.nvim_create_autocmd('BufWritePost', {
   desc = 'Automatically run `chezmoi apply` when saving files in the chezmoi source directory',
-  pattern = '{{ .chezmoi.sourceDir }}/*',
+  pattern = '{{ .chezmoi.sourceDir }}/**/*',
   command = '!chezmoi apply'
 })
