(polybar) assorted fixes with colors

--- a/dot_config/polybar/modules/colors.ini.tmpl
+++ b/dot_config/polybar/modules/colors.ini.tmpl
@@ -1,4 +1,7 @@
 [colors]
+; standard background color for rounded corners to use
+background = {{ .colors.sumiInk4 }}
+
 autumnYellow = {{ .colors.autumnYellow }}
 autumnGreen = {{ .colors.autumnGreen }}
 fujiWhite = {{ .colors.fujiWhite }}
